--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np \n",
     "# import the library\n",
-    "import sktime\n",
+    "import deeptime\n",
     "\n",
     "# for example data generation\n",
     "from sklearn.mixture import GaussianMixture\n",
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To this end, we create a [KmeansClustering](../api/generated/sktime.clustering.KmeansClustering.rst#sktime.clustering.KmeansClustering) object. Note that that maximum number of iterations is set to zero so that the initialization can be observed."
+    "To this end, we create a [KmeansClustering](../api/generated/deeptime.clustering.KmeansClustering.rst#deeptime.clustering.KmeansClustering) object. Note that that maximum number of iterations is set to zero so that the initialization can be observed."
    ]
   },
   {
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.clustering.KmeansClustering(\n",
+    "estimator = deeptime.clustering.KmeansClustering(\n",
     "    n_clusters=100,  # place 100 cluster centers \n",
     "    init_strategy='uniform',  # uniform initialization strategy\n",
     "    max_iter=0,  # don't actually perform the optimization, just place centers\n",
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [KmeansClustering](../api/generated/sktime.clustering.KmeansClustering.rst#sktime.clustering.KmeansClustering) object is fit (which means that in this case, only the initial centers are drawn) and with a call to [fetch_model()](../api/generated/sktime.clustering.KmeansClustering.rst#sktime.clustering.KmeansClustering.fetch_model) yields the estimated [clustering model](../api/generated/sktime.clustering.KMeansClusteringModel.rst#sktime.clustering.KMeansClusteringModel). The model mainly stores the estimated parameters (in this case: cluster centers) and offers convenience methods."
+    "The [KmeansClustering](../api/generated/deeptime.clustering.KmeansClustering.rst#deeptime.clustering.KmeansClustering) object is fit (which means that in this case, only the initial centers are drawn) and with a call to [fetch_model()](../api/generated/deeptime.clustering.KmeansClustering.rst#deeptime.clustering.KmeansClustering.fetch_model) yields the estimated [clustering model](../api/generated/deeptime.clustering.KMeansClusteringModel.rst#deeptime.clustering.KMeansClusteringModel). The model mainly stores the estimated parameters (in this case: cluster centers) and offers convenience methods."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A call to [transform()](../api/generated/sktime.clustering.KMeansClusteringModel.rst#sktime.clustering.KMeansClusteringModel.transform) assigns the samples to their nearest cluster center, yielding a so-called _discrete trajectory_ of integer values."
+    "A call to [transform()](../api/generated/deeptime.clustering.KMeansClusteringModel.rst#deeptime.clustering.KMeansClusteringModel.transform) assigns the samples to their nearest cluster center, yielding a so-called _discrete trajectory_ of integer values."
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the training [inertias](../api/generated/sktime.clustering.KMeansClusteringModel.rst#sktime.clustering.KMeansClusteringModel.inertias), i.e., the evaluation of the objective function\n",
+    "Looking at the training [inertias](../api/generated/deeptime.clustering.KMeansClusteringModel.rst#deeptime.clustering.KMeansClusteringModel.inertias), i.e., the evaluation of the objective function\n",
     "\n",
     "$$\\sum_{i=1}^{k} \\sum_{\\mathbf{x}_j \\in S_i} \\left\\| \\mathbf{x}_j - \\boldsymbol\\mu_i \\right\\|^2,$$\n",
     "\n",
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.clustering.KmeansClustering(\n",
+    "estimator = deeptime.clustering.KmeansClustering(\n",
     "    n_clusters=100,  # place 100 cluster centers\n",
     "    init_strategy='kmeans++',  # kmeans++ initialization strategy\n",
     "    max_iter=0,  # don't actually perform the optimization, just place centers\n",
@@ -454,7 +454,7 @@
    "source": [
     "## Mini-batch k-means\n",
     "\n",
-    "If the data set at hand is too large to have it in memory at once but still a clustering should be performed, [mini-batch k-means](../api/generated/sktime.clustering.MiniBatchKmeansClustering.rst#sktime.clustering.MiniBatchKmeansClustering) <cite data-cite=\"nbcluster-sculley2010web\">(Sculley, 2010)</cite> can be used. Similarly to ordinary k-means, it needs a set of initial centers and then tries to minimize the k-means objective. However, it does so in a streaming fashion, i.e., the model gets constantly fed with new / different data.\n",
+    "If the data set at hand is too large to have it in memory at once but still a clustering should be performed, [mini-batch k-means](../api/generated/deeptime.clustering.MiniBatchKmeansClustering.rst#deeptime.clustering.MiniBatchKmeansClustering) <cite data-cite=\"nbcluster-sculley2010web\">(Sculley, 2010)</cite> can be used. Similarly to ordinary k-means, it needs a set of initial centers and then tries to minimize the k-means objective. However, it does so in a streaming fashion, i.e., the model gets constantly fed with new / different data.\n",
     "\n",
     "This data can come from a large data source and/or be randomly sampled. Memory consumption is therefore lower and the algorithm itself can converge quicker. However, the quality of the obtained results is reduced."
    ]
@@ -465,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.clustering.MiniBatchKmeansClustering(\n",
+    "estimator = deeptime.clustering.MiniBatchKmeansClustering(\n",
     "    n_clusters=100,  # number of cluster centers\n",
     "    max_iter=100,  # maximum number of passes over full dataset when calling fit()\n",
     "    batch_size=327,  # sample size when drawing samples in fit()\n",
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While calling `fit(samples)` makes passes over the whole data, the model can also be [partially fitted](../api/generated/sktime.clustering.MiniBatchKmeansClustering.rst#sktime.clustering.MiniBatchKmeansClustering.partial_fit) and therefore trained in an online fashion."
+    "While calling `fit(samples)` makes passes over the whole data, the model can also be [partially fitted](../api/generated/deeptime.clustering.MiniBatchKmeansClustering.rst#deeptime.clustering.MiniBatchKmeansClustering.partial_fit) and therefore trained in an online fashion."
    ]
   },
   {
@@ -526,7 +526,7 @@
     "\n",
     "Regular space clustering <cite data-cite=\"nbcluster-prinz2011markov\">(Prinz, 2011)</cite> is very similar to Hartigan’s leader algorithm <cite data-cite=\"nbcluster-hartigan1975clustering\">(Hartigan, 1975)</cite>. It consists of two passes through the data. Initially, the first data point is added to the list of centers. For every subsequent data point, if it has a greater distance than $d_\\mathrm{min}$ from every center, it also becomes a center. In the second pass, a Voronoi discretization with the computed centers is used to partition the data.\n",
     "\n",
-    "To perform regular space clustering, a corresponding [RegularSpaceClustering](../api/generated/sktime.clustering.RegularSpaceClustering.rst#sktime.clustering.RegularSpaceClustering) estimator can be created: "
+    "To perform regular space clustering, a corresponding [RegularSpaceClustering](../api/generated/deeptime.clustering.RegularSpaceClustering.rst#deeptime.clustering.RegularSpaceClustering) estimator can be created: "
    ]
   },
   {
@@ -535,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.clustering.RegularSpaceClustering(\n",
+    "estimator = deeptime.clustering.RegularSpaceClustering(\n",
     "    dmin=3,  # minimum distance between cluster centers\n",
     "    max_centers=500,  # maximum number of cluster centers\n",
     "    n_jobs=8\n",
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now a [regular clustering model](../api/generated/sktime.clustering.ClusterModel.rst#sktime.clustering.ClusterModel) can be fitted."
+    "Now a [regular clustering model](../api/generated/deeptime.clustering.ClusterModel.rst#deeptime.clustering.ClusterModel) can be fitted."
    ]
   },
   {
@@ -625,14 +625,14 @@
     "}\n",
     "```\n",
     "\n",
-    "The scikit-time required include directories can be obtained by a call to `sktime.capi_includes()`. Here, the class is exported to Python with with [pybind11](https://github.com/pybind/pybind11) in the same `cpp` file.\n",
+    "The deeptime required include directories can be obtained by a call to `deeptime.capi_includes()`. Here, the class is exported to Python with with [pybind11](https://github.com/pybind/pybind11) in the same `cpp` file.\n",
     "\n",
     "Setting up compilation through, e.g., setuptools can be performed like follows:\n",
     "\n",
     "```python\n",
     "import setuptools\n",
     "import pybind11\n",
-    "import sktime\n",
+    "import deeptime\n",
     "\n",
     "setuptools.setup(\n",
     "    name='custom_metric',\n",
@@ -643,7 +643,7 @@
     "            name='custom_metric',\n",
     "            sources=['bindings.cpp'],\n",
     "            language='c++',\n",
-    "            include_dirs=sktime.capi_includes() + [pybind11.get_include()],\n",
+    "            include_dirs=deeptime.capi_includes() + [pybind11.get_include()],\n",
     "            extra_compile_args=['-fopenmp'],  # OpenMP support, optional\n",
     "            extra_link_args=['-lgomp']  # OpenMP support, optional\n",
     "        )\n",
@@ -654,16 +654,16 @@
     "After successful compilation (`python setup.py develop` or `install`), the metric can be used via\n",
     "\n",
     "```python\n",
-    "import sktime\n",
+    "import deeptime\n",
     "import custom_metric\n",
-    "obs = sktime.data.ellipsoids().observations(1000)\n",
+    "obs = deeptime.data.ellipsoids().observations(1000)\n",
     "\n",
-    "sktime.clustering.metrics.register('max', custom_metric.MaximumMetric)\n",
-    "c = sktime.clustering.KmeansClustering(n_clusters=5, metric='max')\n",
+    "deeptime.clustering.metrics.register('max', custom_metric.MaximumMetric)\n",
+    "c = deeptime.clustering.KmeansClustering(n_clusters=5, metric='max')\n",
     "c.fit(obs)\n",
     "```\n",
     "\n",
-    "It is important to first import `sktime`, so that the base type `Metric` is available."
+    "It is important to first import `deeptime`, so that the base type `Metric` is available."
    ]
   },
   {
