--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hidden Markov Models\n",
     "\n",
-    "For users already familiar with the interface, the [API docs](../api/index_markov.rst#sktime-markov-hmm).\n",
+    "For users already familiar with the interface, the [API docs](../api/index_markov_hmm.rst).\n",
     "\n",
     "Hidden Markov models (HMM) are a type of Markov model where the underlying Markov process $X_t$ is _hidden_ and there is an _observable_ process $Y_t$ which depends on $X_t$. A nice introduction into HMM theory and related algorithms can be found in <cite data-cite=\"nbhmm-rabiner1989tutorial\">(Rabiner, 1989)</cite>. When fitting such a model, the goal is to parameterize a Markov model over $X_t$ by observing $Y_t$. Here the dependency of $Y_t$ on $X_t$ must only depend on the current time step, i.e.,\n",
     "\n",
@@ -22,13 +22,13 @@
     "\n",
     "Due to their more general nature, HMMs can recover from situations and produce good results when MSMs would not, for example in some cases of bad state space discretization. However, HMMs are harder to fit, computationally more expensive, and the estimation likes to get stuck in local optima.\n",
     "\n",
-    "In scikit-time, a hidden Markov model is determined by\n",
+    "In deeptime, a hidden Markov model is determined by\n",
     "\n",
-    "- a hidden transition model $P\\in\\mathbb{R}^{n\\times n}$ (of type [MarkovStateModel](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel)) describing the hidden process,\n",
-    "- an [output model](../api/generated/sktime.markov.hmm.OutputModel.rst#sktime.markov.hmm.OutputModel), which holds information on the emission probabilities,\n",
+    "- a hidden transition model $P\\in\\mathbb{R}^{n\\times n}$ (of type [MarkovStateModel](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel)) describing the hidden process,\n",
+    "- an [output model](../api/generated/deeptime.markov.hmm.OutputModel.rst#deeptime.markov.hmm.OutputModel), which holds information on the emission probabilities,\n",
     "- and an initial distribution $\\pi\\in\\mathbb{R}^n$ over the hidden states, which expresses a prior belief over the average most likely distribution of hidden states.\n",
     "\n",
-    "Creating an [HMM](../api/generated/sktime.markov.hmm.HiddenMarkovModel.rst#sktime.markov.hmm.HiddenMarkovModel) is as simple as importing sktime and fixing at least the transition model and the output model.\n",
+    "Creating an [HMM](../api/generated/deeptime.markov.hmm.HiddenMarkovModel.rst#deeptime.markov.hmm.HiddenMarkovModel) is as simple as importing deeptime and fixing at least the transition model and the output model.\n",
     "\n",
     "Here $P\\in\\mathbb{R}^{2\\times 2}$ is the hidden transition matrix and $E\\in\\mathbb{R}^{2\\times 3}$ are the emission probabilities mapping from two hidden states to two three-state output probability distributions:"
    ]
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sktime\n",
-    "import sktime.markov.hmm as hmm\n",
+    "import deeptime\n",
+    "import deeptime.markov.hmm as hmm\n",
     "\n",
     "P = np.array([[0.95, 0.05], [0.3, 0.7]])\n",
     "E = np.array([\n",
@@ -136,8 +136,8 @@
    "source": [
     "While the output probabilities in this case map to discrete values, this is not the only option. We implement\n",
     "\n",
-    "- the [discrete output model](../api/generated/sktime.markov.hmm.DiscreteOutputModel.rst#sktime.markov.hmm.DiscreteOutputModel), which maps to a discrete observable space and is parameterized by a row-stochastic output probability matrix $E\\in\\mathbb{R}^{n\\times m}$, where $n$ is the number hidden and $m$ the number of observable states,\n",
-    "- and the [Gaussian output model](../api/generated/sktime.markov.hmm.GaussianOutputModel.rst#sktime.markov.hmm.GaussianOutputModel), which maps to a one-dimensional output space with $m$ Gaussians, each parameterized by mean and standard deviation."
+    "- the [discrete output model](../api/generated/deeptime.markov.hmm.DiscreteOutputModel.rst#deeptime.markov.hmm.DiscreteOutputModel), which maps to a discrete observable space and is parameterized by a row-stochastic output probability matrix $E\\in\\mathbb{R}^{n\\times m}$, where $n$ is the number hidden and $m$ the number of observable states,\n",
+    "- and the [Gaussian output model](../api/generated/deeptime.markov.hmm.GaussianOutputModel.rst#deeptime.markov.hmm.GaussianOutputModel), which maps to a one-dimensional output space with $m$ Gaussians, each parameterized by mean and standard deviation."
    ]
   },
   {
@@ -179,14 +179,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When initialized with the ground truth, the deviation is not large from the initial model. Scikit-time furthermore offers some initialization heuristics should the ground truth be unknown.\n",
+    "When initialized with the ground truth, the deviation is not large from the initial model. Deeptime furthermore offers some initialization heuristics should the ground truth be unknown.\n",
     "\n",
     "For discrete output models:\n",
     "\n",
-    "1. [init.discrete.metastable_from_data](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_data.rst#sktime.markov.hmm.init.discrete.metastable_from_data) or [init.discrete.metastable_from_msm](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_msm.rst#sktime.markov.hmm.init.discrete.metastable_from_msm): A reversible [MSM](mlmsm.ipynb) is estimated from given discrete trajectories. This is optional in case the MSM is already available. Then, the estimated transition matrix $P\\in\\mathbb{R}^{n\\times n}$ is coarse-grained with PCCA+ <cite data-cite=\"nbhmm-roblitz2013fuzzy\">(Röblitz, 2013)</cite>, yielding $m$ metastable/macro states and a membership matrix $M\\in\\mathbb{R}^{n\\times m}$. The transition matrix is projected into hidden space via\n",
+    "1. [init.discrete.metastable_from_data](../api/generated/deeptime.markov.hmm.init.discrete.metastable_from_data.rst#deeptime.markov.hmm.init.discrete.metastable_from_data) or [init.discrete.metastable_from_msm](../api/generated/deeptime.markov.hmm.init.discrete.metastable_from_msm.rst#deeptime.markov.hmm.init.discrete.metastable_from_msm): A reversible [MSM](mlmsm.ipynb) is estimated from given discrete trajectories. This is optional in case the MSM is already available. Then, the estimated transition matrix $P\\in\\mathbb{R}^{n\\times n}$ is coarse-grained with PCCA+ <cite data-cite=\"nbhmm-roblitz2013fuzzy\">(Röblitz, 2013)</cite>, yielding $m$ metastable/macro states and a membership matrix $M\\in\\mathbb{R}^{n\\times m}$. The transition matrix is projected into hidden space via\n",
     "    $$ P_\\mathrm{coarse} = (M^\\top M)^{-1}M^\\top PM. $$\n",
     "    This procedure is described in greater detail in <cite data-cite=\"nbhmm-noe2013projected\">(Noé, 2013)</cite>.\n",
-    "2. [init.discrete.random_guess](../api/generated/sktime.markov.hmm.init.discrete.random_guess.rst#sktime.markov.hmm.init.discrete.random_guess): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from the uniform distribution $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
+    "2. [init.discrete.random_guess](../api/generated/deeptime.markov.hmm.init.discrete.random_guess.rst#deeptime.markov.hmm.init.discrete.random_guess): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from the uniform distribution $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
    ]
   },
   {
@@ -232,9 +232,9 @@
    "source": [
     "## Bayesian sampling\n",
     "\n",
-    "Bayesian sampling of HMMs can be used to obtain confidences. In particular, Gibbs sampling can be performed around a reference HMM, as introduced in <cite data-cite=\"nbhmm-chodera2011bayesian\">(Chodera, 2011)</cite>. In scikit-time, a [BayesianHMM](../api/generated/sktime.markov.hmm.BayesianHMM.rst#sktime.markov.hmm.BayesianHMM) estimator is provided.\n",
+    "Bayesian sampling of HMMs can be used to obtain confidences. In particular, Gibbs sampling can be performed around a reference HMM, as introduced in <cite data-cite=\"nbhmm-chodera2011bayesian\">(Chodera, 2011)</cite>. In deeptime, a [BayesianHMM](../api/generated/deeptime.markov.hmm.BayesianHMM.rst#deeptime.markov.hmm.BayesianHMM) estimator is provided.\n",
     "\n",
-    "The easiest method to obtain a BayesianHMM estimator from data is the [default()](../api/generated/sktime.markov.hmm.BayesianHMM.rst#sktime.markov.hmm.BayesianHMM.default) static method. It estimates an ML-MSM on data, coarse-grains it to the requested number of hidden states and uses it as starting point for an ML-HMM estimation. The resulting model is used as start sample for the BayesianHMM estimator."
+    "The easiest method to obtain a BayesianHMM estimator from data is the [default()](../api/generated/deeptime.markov.hmm.BayesianHMM.rst#deeptime.markov.hmm.BayesianHMM.default) static method. It estimates an ML-MSM on data, coarse-grains it to the requested number of hidden states and uses it as starting point for an ML-HMM estimation. The resulting model is used as start sample for the BayesianHMM estimator."
    ]
   },
   {
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calling `fit` on the estimator starts sampling and yields a [BayesianHMMPosterior](../api/generated/sktime.markov.hmm.BayesianHMMPosterior.rst#sktime.markov.hmm.BayesianHMMPosterior) instance."
+    "Calling `fit` on the estimator starts sampling and yields a [BayesianHMMPosterior](../api/generated/deeptime.markov.hmm.BayesianHMMPosterior.rst#deeptime.markov.hmm.BayesianHMMPosterior) instance."
    ]
   },
   {
