--- a/docs/source/notebooks/mlmsm.ipynb
+++ b/docs/source/notebooks/mlmsm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Maximum-likelihood MSMs\n",
     "\n",
-    "This kind of estimator tries to determine the most likely transition matrix $P\\in\\mathbb{R}^{n\\times n}$ given the [transition counts](./transition-counting.ipynb) $C\\in\\mathbb{R}^{n\\times n}$. For those already familiar with the interface: The corresponding [API docs](../api/generated/sktime.markov.msm.MaximumLikelihoodMSM.rst#sktime.markov.msm.MaximumLikelihoodMSM).\n",
+    "This kind of estimator tries to determine the most likely transition matrix $P\\in\\mathbb{R}^{n\\times n}$ given the [transition counts](./transition-counting.ipynb) $C\\in\\mathbb{R}^{n\\times n}$. For those already familiar with the interface: The corresponding [API docs](../api/generated/deeptime.markov.msm.MaximumLikelihoodMSM.rst#deeptime.markov.msm.MaximumLikelihoodMSM).\n",
     "\n",
     "The likelihood that a transition matrix $P$ belongs to a trajectory $S = (s_0,\\ldots,s_T)$ is given by\n",
     "\n",
@@ -21,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sktime\n",
+    "import deeptime\n",
     "\n",
-    "estimator = sktime.markov.msm.MaximumLikelihoodMSM(\n",
+    "estimator = deeptime.markov.msm.MaximumLikelihoodMSM(\n",
     "    reversible=True,\n",
     "    stationary_distribution_constraint=None\n",
     ")"
@@ -60,7 +60,7 @@
     "p22 = 0.97\n",
     "p33 = 0.97\n",
     "P = np.array([[p11, 1 - p11, 0], [.5*(1 - p22), p22, 0.5*(1-p22)], [0, 1-p33, p33]])\n",
-    "true_msm = sktime.markov.msm.MarkovStateModel(P)"
+    "true_msm = deeptime.markov.msm.MarkovStateModel(P)"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts_estimator = sktime.markov.TransitionCountEstimator(\n",
+    "counts_estimator = deeptime.markov.TransitionCountEstimator(\n",
     "    lagtime=1, count_mode=\"sliding\"\n",
     ")\n",
     "counts = counts_estimator.fit(trajectory).fetch_model()"
@@ -197,7 +197,7 @@
    "source": [
     "## Bayesian sampling\n",
     "\n",
-    "While the maximum likelihood estimation is useful, it does not say anything about uncertainties. These can be obtained by estimating a Bayesian posterior with the [Bayesian MSM](../api/generated/sktime.markov.msm.BayesianMSM.rst#sktime.markov.msm.BayesianMSM) <cite data-cite=\"nbmlmsm-trendelkamp2015estimation\">(Trendelkamp-Schroer, 2015)</cite>. The posterior contains the prior around which sampling was performed as well as samples over which statistics can be collected. \n",
+    "While the maximum likelihood estimation is useful, it does not say anything about uncertainties. These can be obtained by estimating a Bayesian posterior with the [Bayesian MSM](../api/generated/deeptime.markov.msm.BayesianMSM.rst#deeptime.markov.msm.BayesianMSM) <cite data-cite=\"nbmlmsm-trendelkamp2015estimation\">(Trendelkamp-Schroer, 2015)</cite>. The posterior contains the prior around which sampling was performed as well as samples over which statistics can be collected. \n",
     "\n",
     "Similarly to the maximum-likelihood estimator it has the option to make estimation `reversible` as well as to introduce a `stationary_distribution_constraint`. Furthermore, it can be specified how many samples should be drawn as well as how many Gibbs sampling should be performed for each output sample."
    ]
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.markov.msm.BayesianMSM(\n",
+    "estimator = deeptime.markov.msm.BayesianMSM(\n",
     "    n_samples=100,\n",
     "    n_steps=10,\n",
     "    reversible=True,\n",
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts_estimator = sktime.markov.TransitionCountEstimator(\n",
+    "counts_estimator = deeptime.markov.TransitionCountEstimator(\n",
     "    lagtime=1, count_mode=\"effective\"\n",
     ")\n",
     "counts_effective = counts_estimator.fit(trajectory).fetch_model()"
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The prior can be accessed via the `prior` property, the samples can be accessed via the `samples` property. Both are just instances of [MarkovStateModel](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel) and a list thereof, respectively. "
+    "The prior can be accessed via the `prior` property, the samples can be accessed via the `samples` property. Both are just instances of [MarkovStateModel](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel) and a list thereof, respectively. "
    ]
   },
   {
