--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# TICA\n",
     "\n",
-    "For users already familiar with the TICA interface: The corresponding [API docs](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA)."
+    "For users already familiar with the TICA interface: The corresponding [API docs](../api/generated/deeptime.decomposition.TICA.rst#deeptime.decomposition.TICA)."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "import numpy as np  # NumPy for general numerical operations\n",
-    "import sktime"
+    "import deeptime"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(lagtime=1)"
+    "tica = deeptime.decomposition.TICA(lagtime=1)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "source": [
     "yielding an estimator which operates on symmetrized correlation matrices and takes as many eigenvalues as required to capture 95% of the kinetic variance of the time series.\n",
     "\n",
-    "It can be fit by calling [fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fit). This method distinguishes between arguments which are covariance matrices in form of a symmetrized [CovarianceModel](../api/generated/sktime.covariance.CovarianceModel.rst#sktime.covariance.CovarianceModel) and raw timeseries data. In case of raw timeseries data, the lagtime $\\tau$ must be provided, otherwise it is inferred from the covariance model.\n",
+    "It can be fit by calling [fit()](../api/generated/deeptime.decomposition.TICA.rst#deeptime.decomposition.TICA.fit). This method distinguishes between arguments which are covariance matrices in form of a symmetrized [CovarianceModel](../api/generated/deeptime.covariance.CovarianceModel.rst#deeptime.covariance.CovarianceModel) and raw timeseries data. In case of raw timeseries data, the lagtime $\\tau$ must be provided, otherwise it is inferred from the covariance model.\n",
     "\n",
     "_Note_: TICA makes reversible estimates and then assumes, that the data is in equilibrium. In case of reversible estimate but non-equilibrium data (e.g., many short trajectories which start off-equilibrium), [Koopman reweighting](#Koopman-reweighting) can be used."
    ]
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Optionally, covariances can be estimated and then used to fit the estimator. The [covariance_estimator](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.covariance_estimator) method yields a [Covariance](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance) estimator which is properly configured for TICA (i.e., it symmetrizes the covariances and computes $C_{00} = C_{tt}$ and $C_{0t}$):"
+    "Optionally, covariances can be estimated and then used to fit the estimator. The [covariance_estimator](../api/generated/deeptime.decomposition.TICA.rst#deeptime.decomposition.TICA.covariance_estimator) method yields a [Covariance](../api/generated/deeptime.covariance.Covariance.rst#deeptime.covariance.Covariance) estimator which is properly configured for TICA (i.e., it symmetrizes the covariances and computes $C_{00} = C_{tt}$ and $C_{0t}$):"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covariances = sktime.decomposition.TICA.covariance_estimator(lagtime=1) \\\n",
+    "covariances = deeptime.decomposition.TICA.covariance_estimator(lagtime=1) \\\n",
     "    .fit(data)\n",
     "tica.fit(covariances)"
    ]
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model can be obtained by a call to [fetch_model()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fetch_model) in order to transform / project data."
+    "The model can be obtained by a call to [fetch_model()](../api/generated/deeptime.decomposition.TICA.rst#deeptime.decomposition.TICA.fetch_model) in order to transform / project data."
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more details, please see below examples as well as the [API docs](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA)."
+    "For more details, please see below examples as well as the [API docs](../api/generated/deeptime.decomposition.TICA.rst#deeptime.decomposition.TICA)."
    ]
   },
   {
@@ -163,7 +163,7 @@
     "$$\n",
     "we have a probability $P_{11} = 97\\%$ to stay in state \"0\" and a $P_{12} = 3\\%$ to transition from state \"0\" to state \"1\" and vice versa. \n",
     "\n",
-    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/impl/sktime.data.ellipsoids_dataset.Ellipsoids.rst#sktime.data.ellipsoids_dataset.Ellipsoids)."
+    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/impl/deeptime.data.ellipsoids_dataset.Ellipsoids.rst#deeptime.data.ellipsoids_dataset.Ellipsoids)."
    ]
   },
   {
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "# create dataset instance\n",
-    "ellipsoids = sktime.data.ellipsoids(seed=17)\n",
+    "ellipsoids = deeptime.data.ellipsoids(seed=17)\n",
     "# discrete transitions\n",
     "discrete_trajectory = ellipsoids.discrete_trajectory(n_steps=1000)\n",
     "# corresponding observations\n",
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(\n",
+    "tica = deeptime.decomposition.TICA(\n",
     "    dim=1,  # fix projection dimension explicitly\n",
     "    lagtime=1\n",
     ")"
@@ -295,9 +295,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the [tica model](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel) can be estimated.\n",
+    "Now the [tica model](../api/generated/deeptime.decomposition.CovarianceKoopmanModel.rst#deeptime.decomposition.CovarianceKoopmanModel) can be estimated.\n",
     "\n",
-    "_Note_: In the reversible (default) case, this assumes that the data comes from an equilibirum distribution. Applying the method as-is to short off-equilibrium data produces heavily biased estimates. See [Koopman reweighting](#Koopman-reweighting) (or the corresponding [API docs](../api/generated/sktime.covariance.KoopmanWeightingEstimator.rst#sktime.covariance.KoopmanWeightingEstimator)) for a reweighting technique that extends TICA to non-equilibrium data."
+    "_Note_: In the reversible (default) case, this assumes that the data comes from an equilibirum distribution. Applying the method as-is to short off-equilibrium data produces heavily biased estimates. See [Koopman reweighting](#Koopman-reweighting) (or the corresponding [API docs](../api/generated/deeptime.covariance.KoopmanWeightingEstimator.rst#deeptime.covariance.KoopmanWeightingEstimator)) for a reweighting technique that extends TICA to non-equilibrium data."
    ]
   },
   {
@@ -486,7 +486,7 @@
    "source": [
     "## Koopman reweighting\n",
     "\n",
-    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"nbtica-wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In scikit-time, a [Koopman weighting estimator](../api/generated/sktime.covariance.KoopmanWeightingEstimator.rst#sktime.covariance.KoopmanWeightingEstimator) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/sktime.covariance.KoopmanWeightingModel.rst#sktime.covariance.KoopmanWeightingModel) can be used as an argument in TICA's `fit`. \n",
+    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"nbtica-wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In deeptime, a [Koopman weighting estimator](../api/generated/deeptime.covariance.KoopmanWeightingEstimator.rst#deeptime.covariance.KoopmanWeightingEstimator) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/deeptime.covariance.KoopmanWeightingModel.rst#deeptime.covariance.KoopmanWeightingModel) can be used as an argument in TICA's `fit`. \n",
     "\n",
     "This reweighting technique becomes necessary as soon as the available data is not a single long trajectory which equilibrates and then is in an equilibrium state for the rest of the time but rather if many short and at least initially off-equilibrium trajectories are used. "
    ]
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(lagtime=1, dim=1)"
+    "tica = deeptime.decomposition.TICA(lagtime=1, dim=1)"
    ]
   },
   {
@@ -513,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_estimator = sktime.covariance.KoopmanWeightingEstimator(lagtime=1)\n",
+    "koopman_estimator = deeptime.covariance.KoopmanWeightingEstimator(lagtime=1)\n",
     "reweighting_model = koopman_estimator.fit(feature_trajectory).fetch_model()"
    ]
   },
