--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "A mathematical description of TPT can be found in <cite data-cite=\"nbtpt-weinan2006towards\">(E, 2006) and </cite><cite data-cite=\"nbtpt-metzner2009transition\">(Metzner, 2009)</cite>. The implementation is based on <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite>. Coarse-graining by path decomposition is presented in <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite> and <cite data-cite=\"nbtpt-berezhkovskii2009reactive\">(Berezhokovskii, 2009)</cite>.\n",
     "    \n",
-    "To demonstrate the TPT API ([API docs here](../api/generated/sktime.markov.ReactiveFlux.rst#sktime.markov.ReactiveFlux)), in the following the example of a drunkard's walk is presented. The example is motivated by <cite data-cite=\"nbtpt-doyle1984random\">(Doyle, 1984)</cite> and <cite data-cite=\"nbtpt-valleriani2015circular\">(Valleriani, 2015)</cite>, where a drunkard is placed on a network of states and two special states, home and the bar. When the drunkard reaches either of these special states the trajectory stays there with high probability.\n",
+    "To demonstrate the TPT API ([API docs here](../api/generated/deeptime.markov.ReactiveFlux.rst#deeptime.markov.ReactiveFlux)), in the following the example of a drunkard's walk is presented. The example is motivated by <cite data-cite=\"nbtpt-doyle1984random\">(Doyle, 1984)</cite> and <cite data-cite=\"nbtpt-valleriani2015circular\">(Valleriani, 2015)</cite>, where a drunkard is placed on a network of states and two special states, home and the bar. When the drunkard reaches either of these special states the trajectory stays there with high probability.\n",
     "One can then ask which paths can be taken and also with which probability the drunkard is going to reach either of the states given a certain current position."
    ]
   },
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To this end, import sktime and numpy for general numerical operations."
+    "To this end, import deeptime and numpy for general numerical operations."
    ]
   },
   {
@@ -28,14 +28,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sktime"
+    "import deeptime"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can create a [DrunkardsWalk](../api/generated/sktime.data.drunkards_walk.rst#sktime.data.drunkards_walk) simulator by specifying bar and home locations. As the drunkard lives on a 2-dimensional grid, the locations are given in terms of integer coordinates. Internally, this is related back to $\\mathrm{width}\\times\\mathrm{height}$ states. \n",
+    "We can create a [DrunkardsWalk](../api/generated/deeptime.data.drunkards_walk.rst#deeptime.data.drunkards_walk) simulator by specifying bar and home locations. As the drunkard lives on a 2-dimensional grid, the locations are given in terms of integer coordinates. Internally, this is related back to $\\mathrm{width}\\times\\mathrm{height}$ states. \n",
     "\n",
     "There are four kinds of states:\n",
     "- home states: states which denote the location of the home\n",
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = sktime.data.drunkards_walk(grid_size=(10, 10),\n",
+    "sim = deeptime.data.drunkards_walk(grid_size=(10, 10),\n",
     "                                 bar_location=[(0, 0), (0, 1), (1, 0), (1, 1)], \n",
     "                                 home_location=[(8, 8), (8, 9), (9, 8), (9, 9)])"
    ]
@@ -135,7 +135,7 @@
    "source": [
     "Here, the darker red squares denote hard barriers, the lighter red squares denote barriers which can be crossed. So one could imagine, that both home and bar are on a hill.\n",
     "\n",
-    "The simulator internally holds a [MarkovStateModel](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel) on which one can call [reactive_flux(A, B)](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel.reactive_flux). This computes some quantities related to the ensemble of reactive trajectories between sets of states $A$ and $B$."
+    "The simulator internally holds a [MarkovStateModel](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel) on which one can call [reactive_flux(A, B)](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel.reactive_flux). This computes some quantities related to the ensemble of reactive trajectories between sets of states $A$ and $B$."
    ]
   },
   {
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In scikit-time, the gross and net flux are accessible from the [ReactiveFlux](../api/generated/sktime.markov.ReactiveFlux.rst) object as $(n_\\mathrm{states}\\times n_\\mathrm{states})$ numpy arrays, where the first dimension corresponds to state $i$, the second dimension corresponds to state $j$."
+    "In deeptime, the gross and net flux are accessible from the [ReactiveFlux](../api/generated/deeptime.markov.ReactiveFlux.rst) object as $(n_\\mathrm{states}\\times n_\\mathrm{states})$ numpy arrays, where the first dimension corresponds to state $i$, the second dimension corresponds to state $j$."
    ]
   },
   {
@@ -555,14 +555,14 @@
     "\n",
     "A pathway decomposition is then the repeated choosing of a path and subsequent removal of its capacity along its edges until no flux remains.\n",
     "\n",
-    "The decomposition is not unique and depends on the order in which the paths are choosen. In scikit-time, a pathway decomposition is implemented by iteratively removing the currently strongest pathway (i.e., with largest capacity)."
+    "The decomposition is not unique and depends on the order in which the paths are choosen. In deeptime, a pathway decomposition is implemented by iteratively removing the currently strongest pathway (i.e., with largest capacity)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A call to [pathways()](../api/generated/sktime.markov.ReactiveFlux.rst#sktime.markov.ReactiveFlux.pathways) performs said operation. One can optionally give a fraction (default 1.0) which stops the decomposition when the given fraction of the total flux is reached with the decomposition. The default tries to the flux into all dominant pathways which can be computationally intensive for large networks. Furthermore one can set a hard limit on the number of computed pathways via the `maxiter` argument."
+    "A call to [pathways()](../api/generated/deeptime.markov.ReactiveFlux.rst#deeptime.markov.ReactiveFlux.pathways) performs said operation. One can optionally give a fraction (default 1.0) which stops the decomposition when the given fraction of the total flux is reached with the decomposition. The default tries to the flux into all dominant pathways which can be computationally intensive for large networks. Furthermore one can set a hard limit on the number of computed pathways via the `maxiter` argument."
    ]
   },
   {
@@ -639,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_model = sktime.markov.TransitionCountEstimator(1, 'sliding', n_states=sim.n_states) \\\n",
+    "count_model = deeptime.markov.TransitionCountEstimator(1, 'sliding', n_states=sim.n_states) \\\n",
     "    .fit(trajs).fetch_model()\n",
     "count_model = count_model.submodel_largest()"
    ]
@@ -667,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlmsm = sktime.markov.msm.MaximumLikelihoodMSM().fit(count_model).fetch_model()"
+    "mlmsm = deeptime.markov.msm.MaximumLikelihoodMSM().fit(count_model).fetch_model()"
    ]
   },
   {
