--- a/docs/source/notebooks/transition-counting.ipynb
+++ b/docs/source/notebooks/transition-counting.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "To begin estimating markov state models one needs to collect statistics over available data, in particular transitions between states at a given lag time $\\tau$.\n",
     "\n",
-    "These statistics can be collected using scikit-time's transition count estimator ([apidocs](../api/generated/sktime.markov.TransitionCountEstimator.rst#sktime.markov.TransitionCountEstimator)).\n",
+    "These statistics can be collected using deeptime's transition count estimator ([apidocs](../api/generated/deeptime.markov.TransitionCountEstimator.rst#deeptime.markov.TransitionCountEstimator)).\n",
     "\n",
     "When creating an instance of said estimator, one has to make two choices: The lagtime $\\tau > 0$ and the count mode. The lag time is the step size of the markov chain, i.e, an underlying transition matrix of the process with\n",
     "\n",
@@ -23,7 +23,7 @@
     "   $$ (0 \\rightarrow \\tau), (1 \\rightarrow \\tau+1), ..., (T-\\tau-1 \\rightarrow T-1). $$\n",
     "   This introduces an overestimation of the actual count values by a factor of \"lagtime\". For maximum-likelihood MSMs this plays no role but it leads to wrong error bars in uncertainty estimation.\n",
     "- `\"sliding-effective\"`: Same as sliding mode, just that the resulting count matrix is divided by the lagtime after counting. This which can be shown to provide a likelihood that is the geometrical average over shifted subsamples of the trajectory, $(s_1,\\:s_{tau+1},\\:...),\\:(s_2,\\:t_{tau+2},\\:...)$, etc. This geometrical average converges to the correct likelihood in the statistical limit <cite data-cite=\"nbtransitions-trendelkamp2015estimation\">(Trendelkamp-Schroer, 2015)</cite>.\n",
-    "- `\"effective\"`: Uses an estimate of the transition counts that are statistically uncorrelated. Recommended when used with a [Bayesian MSM](./mlmsm.ipynb) (or the respective [API docs](../api/generated/sktime.markov.msm.BayesianMSM.rst#sktime.markov.msm.BayesianMSM)). A description of the estimation procedure can be found in <cite data-cite=\"nbtransitions-noe2015statistical\">(Noé, 2015)</cite>."
+    "- `\"effective\"`: Uses an estimate of the transition counts that are statistically uncorrelated. Recommended when used with a [Bayesian MSM](./mlmsm.ipynb) (or the respective [API docs](../api/generated/deeptime.markov.msm.BayesianMSM.rst#deeptime.markov.msm.BayesianMSM)). A description of the estimation procedure can be found in <cite data-cite=\"nbtransitions-noe2015statistical\">(Noé, 2015)</cite>."
    ]
   },
   {
@@ -32,10 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sktime\n",
+    "import deeptime\n",
     "import numpy as np\n",
     "\n",
-    "estimator = sktime.markov.TransitionCountEstimator(\n",
+    "estimator = deeptime.markov.TransitionCountEstimator(\n",
     "    lagtime=1,\n",
     "    count_mode=\"sliding\"\n",
     ")"
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Optionally, one can give probability constraints of states as well as selected the connected set by population and not by size. A description of this can be found [here](../api/generated/sktime.markov.TransitionCountModel.rst#sktime.markov.TransitionCountModel.submodel_largest)."
+    "Optionally, one can give probability constraints of states as well as selected the connected set by population and not by size. A description of this can be found [here](../api/generated/deeptime.markov.TransitionCountModel.rst#deeptime.markov.TransitionCountModel.submodel_largest)."
    ]
   },
   {
