--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# VAMP\n",
     "\n",
-    "For users already familiar with the VAMP interface: The corresponding [API docs](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP).\n",
+    "For users already familiar with the VAMP interface: The corresponding [API docs](../api/generated/deeptime.decomposition.VAMP.rst#deeptime.decomposition.VAMP).\n",
     "\n",
     "VAMP is short for [V]ariational [A]pproach for [M]arkov [P]rocesses and was introduced in <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>. It can be used as linear dimensionality reduction tool and extends [TICA](tica.ipynb) in the sense that it gives rise to a systematic way to select input features as well as handles off-equilibrium data consistently. The method is a form of canonical correlation analysis <cite data-cite=\"nbvamp-hotelling1992relations\">(Hotelling, 1992)</cite> (originally presented in 1935) in time, also called temporal canonical correlation analysis (TCCA).\n",
     "\n",
@@ -37,7 +37,7 @@
    "source": [
     "## Short API demonstration\n",
     "\n",
-    "To create a [VAMP estimator](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP), scikit-time needs to be imported..."
+    "To create a [VAMP estimator](../api/generated/deeptime.decomposition.VAMP.rst#deeptime.decomposition.VAMP), deeptime needs to be imported..."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sktime"
+    "import deeptime"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vamp_estimator = sktime.decomposition.VAMP(\n",
+    "vamp_estimator = deeptime.decomposition.VAMP(\n",
     "    dim=1  # projection dimension\n",
     ")"
    ]
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For demonstration purposes, we look at the Ellipsoids sample dataset, which is described in some detail in the example data's [documentation](../api/generated/impl/sktime.data.ellipsoids_dataset.Ellipsoids.rst#sktime.data.ellipsoids_dataset.Ellipsoids). In short, it is a two-dimensional process that has two metastable states in the form of nonoverlapping ellipsoids."
+    "For demonstration purposes, we look at the Ellipsoids sample dataset, which is described in some detail in the example data's [documentation](../api/generated/impl/deeptime.data.ellipsoids_dataset.Ellipsoids.rst#deeptime.data.ellipsoids_dataset.Ellipsoids). In short, it is a two-dimensional process that has two metastable states in the form of nonoverlapping ellipsoids."
    ]
   },
   {
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "# create dataset instance with fixed seed for reproducibility\n",
-    "ellipsoids = sktime.data.ellipsoids(seed=17)\n",
+    "ellipsoids = deeptime.data.ellipsoids(seed=17)\n",
     "# 1000 observations\n",
     "feature_trajectory = ellipsoids.observations(1000)\n",
     "print(feature_trajectory.shape)"
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covars = sktime.decomposition.VAMP.covariance_estimator(\n",
+    "covars = deeptime.decomposition.VAMP.covariance_estimator(\n",
     "    lagtime=1  # the time lag with which the covariance matrices are estimated\n",
     ").fit(feature_trajectory).fetch_model()\n",
     "vamp_estimator.fit(covars)\n",
@@ -121,7 +121,7 @@
     "\n",
     "# ---- or ----\n",
     "\n",
-    "model = sktime.decomposition.VAMP(lagtime=1, dim=1).fit(feature_trajectory).fetch_model()"
+    "model = deeptime.decomposition.VAMP(lagtime=1, dim=1).fit(feature_trajectory).fetch_model()"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "\n",
     "where $\\bar{\\mathcal{K}}_\\tau$ denotes the projected Koopman operator.\n",
     "\n",
-    "The [VAMP estimator](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP) first and foremost solves the following problem:\n",
+    "The [VAMP estimator](../api/generated/deeptime.decomposition.VAMP.rst#deeptime.decomposition.VAMP) first and foremost solves the following problem:\n",
     "\n",
     "> Given a basis set $\\chi^\\top = (\\chi_0, \\chi_1)^\\top$ so that $f = U^\\top \\chi_0$ and $g=V^\\top \\chi_1$, find weights $U,V\\in\\mathbb{R}^{m\\times k}$ so that the resulting linear model $\\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)]$ is optimal. For the purposes of estimation the potentially different basis sets $\\chi_0$ and $\\chi_1$ are assumed to be equal. In practice one can achieve this by simply concatenating the observable trajectories in time.\n",
     "\n",
@@ -221,7 +221,7 @@
     "C_{tt} &= \\mathbb{E}_t[(\\chi_1(x_{t+\\tau})-\\mu_1)(\\chi_1(x_{t+\\tau})-\\mu_1)^\\top]\n",
     "\\end{aligned}$$\n",
     "\n",
-    "can be computed by the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). These covariance matrices can be accessed in the computed model:"
+    "can be computed by the [Covariances estimator](../api/generated/deeptime.covariance.Covariance.rst#deeptime.covariance.Covariance). These covariance matrices can be accessed in the computed model:"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "\n",
     "$$\\bar K = C_{00}^{-1/2}C_{0t}C_{tt}^{-1/2} \\approx U' \\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k) V'^\\top $$\n",
     "\n",
-    "is evaluated, where $\\bar K$ is the Koopman matrix for normalized basis functions $C_{00}^{-1/2}\\chi_0$ and $C_{tt}^{-1/2}\\chi_1$, respectively. The truncation is based on the [dim](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP.dim) parameter of the estimator.\n",
+    "is evaluated, where $\\bar K$ is the Koopman matrix for normalized basis functions $C_{00}^{-1/2}\\chi_0$ and $C_{tt}^{-1/2}\\chi_1$, respectively. The truncation is based on the [dim](../api/generated/deeptime.decomposition.VAMP.rst#deeptime.decomposition.VAMP.dim) parameter of the estimator.\n",
     "\n",
     "The sought-after weight matrices $U$ and $V$ are then given by\n",
     "\n",
@@ -278,7 +278,7 @@
     "\n",
     "is then given by $K = \\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k)$, $f_i = u_i^\\top\\chi_0$, and $g_i = v_i^\\top\\chi_1$.\n",
     "\n",
-    "The model's [transform(data, forward=True)](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel.transform) gives access to $f$ and $g$:"
+    "The model's [transform(data, forward=True)](../api/generated/deeptime.decomposition.CovarianceKoopmanModel.rst#deeptime.decomposition.CovarianceKoopmanModel.transform) gives access to $f$ and $g$:"
    ]
   },
   {
@@ -357,7 +357,7 @@
     "\n",
     "This makes it possible to not only optimize for transforms given a basis but also for the basis itself. If -hyothetically- infinite data and computational power were avaiable, the best possible basis would be the one that can describe the full operator $\\mathcal{K}_\\tau$. In practice however, often a balance between the modeling/discretization error of approximating $\\mathcal{K}_\\tau$ and the statistical error of fitting the parameters given finite data has to be struck.\n",
     "\n",
-    "There are three different scores implemented in scikit-time:\n",
+    "There are three different scores implemented in deeptime:\n",
     "\n",
     "1. The VAMP-1 score, evaluating the sum of the singular values $s = \\sum_i\\sigma_i$ <cite data-cite=\"nbvamp-noe2013variational\">(Noé, 2013)</cite> and <cite data-cite=\"nbvamp-mcgibbon2015variational\">(McGibbon, 2015)</cite>:"
    ]
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Optionally the singular vectors can be scaled upon projection. Per default, [scaling](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP.scaling) is set to `None` which means that no scaling is applied and the variance of all singular vectors (sometimes also called order parameters) is $1$."
+    "Optionally the singular vectors can be scaled upon projection. Per default, [scaling](../api/generated/deeptime.decomposition.VAMP.rst#deeptime.decomposition.VAMP.scaling) is set to `None` which means that no scaling is applied and the variance of all singular vectors (sometimes also called order parameters) is $1$."
    ]
   },
   {
@@ -463,7 +463,7 @@
    "source": [
     "## Example with position based fluids\n",
     "\n",
-    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"nbvamp-macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.position_based_fluids.rst#sktime.data.position_based_fluids)."
+    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"nbvamp-macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/deeptime.data.position_based_fluids.rst#deeptime.data.position_based_fluids)."
    ]
   },
   {
@@ -479,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbf_simulator = sktime.data.position_based_fluids(n_jobs=8)"
+    "pbf_simulator = deeptime.data.position_based_fluids(n_jobs=8)"
    ]
   },
   {
@@ -601,7 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = sktime.decomposition.VAMP(lagtime=100).fit(kde_trajectory).fetch_model()"
+    "model = deeptime.decomposition.VAMP(lagtime=100).fit(kde_trajectory).fetch_model()"
    ]
   },
   {
@@ -696,7 +696,7 @@
     "\n",
     "$$ \\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)] $$\n",
     "\n",
-    "we can also apply the forward operator to frames by calling [forward()](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel.forward). It also allows to project onto specific processes by setting all other singular values to zero."
+    "we can also apply the forward operator to frames by calling [forward()](../api/generated/deeptime.decomposition.CovarianceKoopmanModel.rst#deeptime.decomposition.CovarianceKoopmanModel.forward). It also allows to project onto specific processes by setting all other singular values to zero."
    ]
   },
   {
