--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -16,8 +16,8 @@
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "import sktime\n",
-    "import sktime.decomposition.vampnet as vnet\n",
+    "import deeptime\n",
+    "import deeptime.decomposition.vampnet as vnet\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -50,11 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_source = sktime.data.ellipsoids()\n",
+    "data_source = deeptime.data.ellipsoids()\n",
     "data_source.msm.update_transition_matrix([[.95, .05], [.09, .91]])\n",
     "data = data_source.observations(50000, n_dim=2).astype(np.float32)\n",
     "\n",
-    "dataset = sktime.data.TimeLaggedDataset.from_trajectory(lagtime=1, data=data)"
+    "dataset = deeptime.data.TimeLaggedDataset.from_trajectory(lagtime=1, data=data)"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_model = sktime.decomposition.VAMP(lagtime=1).fit(featurization).fetch_model()"
+    "koopman_model = deeptime.decomposition.VAMP(lagtime=1).fit(featurization).fetch_model()"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_model_direct = sktime.decomposition.VAMP(lagtime=1).fit(data).fetch_model()\n",
+    "koopman_model_direct = deeptime.decomposition.VAMP(lagtime=1).fit(data).fetch_model()\n",
     "\n",
     "print(koopman_model.score())\n",
     "print(koopman_model_direct.score())"
@@ -260,8 +260,8 @@
    "outputs": [],
    "source": [
     "projection = koopman_model.transform(featurization)\n",
-    "dtraj = sktime.clustering.KmeansClustering(2).fit(projection).transform(projection)\n",
-    "msm = sktime.markov.msm.MaximumLikelihoodMSM().fit(dtraj, lagtime=1).fetch_model()"
+    "dtraj = deeptime.clustering.KmeansClustering(2).fit(projection).transform(projection)\n",
+    "msm = deeptime.markov.msm.MaximumLikelihoodMSM().fit(dtraj, lagtime=1).fetch_model()"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear_model = sktime.decomposition.VAMP(lagtime=1, dim=1).fit(data).fetch_model()"
+    "linear_model = deeptime.decomposition.VAMP(lagtime=1, dim=1).fit(data).fetch_model()"
    ]
   },
   {
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = sktime.data.TimeLaggedDataset.from_trajectory(1, coordinates.astype(np.float32))\n",
+    "dataset = deeptime.data.TimeLaggedDataset.from_trajectory(1, coordinates.astype(np.float32))\n",
     "traj_data_train, traj_data_validation = torch.utils.data.random_split(dataset, [n_train, n_validation])"
    ]
   },
