--- a/docs/source/notebooks/pcca.ipynb
+++ b/docs/source/notebooks/pcca.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To illustrate the API (API docs [here](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel.pcca) to cluster an existing MSM and [here](../api/generated/sktime.markov.pcca.rst) for a direct and functional interface), let us consider a jump process between two ellipsoids in a two-dimensional space:"
+    "To illustrate the API (API docs [here](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel.pcca) to cluster an existing MSM and [here](../api/generated/deeptime.markov.pcca.rst) for a direct and functional interface), let us consider a jump process between two ellipsoids in a two-dimensional space:"
    ]
   },
   {
@@ -32,9 +32,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import sktime\n",
+    "import deeptime\n",
     "\n",
-    "data = sktime.data.ellipsoids(laziness=0.97, seed=32).observations(n_steps=5000)"
+    "data = deeptime.data.ellipsoids(laziness=0.97, seed=32).observations(n_steps=5000)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To arrive at a [Markov state model](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel), let us [cluster](../notebooks/clustering.ipynb) the data and assign the frames to the cluster centers."
+    "To arrive at a [Markov state model](../api/generated/deeptime.markov.msm.MarkovStateModel.rst#deeptime.markov.msm.MarkovStateModel), let us [cluster](../notebooks/clustering.ipynb) the data and assign the frames to the cluster centers."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clustering = sktime.clustering.KmeansClustering(n_clusters=50, fixed_seed=13) \\\n",
+    "clustering = deeptime.clustering.KmeansClustering(n_clusters=50, fixed_seed=13) \\\n",
     "    .fit(data).fetch_model()\n",
     "assignments = clustering.transform(data)"
    ]
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msm = sktime.markov.msm.MaximumLikelihoodMSM() \\\n",
+    "msm = deeptime.markov.msm.MaximumLikelihoodMSM() \\\n",
     "    .fit(assignments, lagtime=1).fetch_model()\n",
     "\n",
     "print(f\"Number of states: {msm.n_states}\")"
